Remove unused href

--- a/venta/index.html
+++ b/venta/index.html
@@ -63,7 +63,7 @@
       <hr class="solid">
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/lg_oled_55.jpg" alt="">
           <div class="details">
             <span class="title">TV LG OLED AI ThinQ 4k 55" Smart (OLED55BXPSA)</span>
@@ -74,7 +74,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/heladera.jpeg" alt="">
           <div class="details">
             <span class="title">Heladera con freezer superior Twin Cooling Plus - Samsung - 382L Total - 89L Freezer (RT38K593SL)</span>
@@ -85,7 +85,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/cafetera.jpeg" alt="">
           <div class="details">
             <span class="title">Cafetera Nespresso Lattissima Touch Black (F521-AR-BK-NE) - 1 año de uso</span>
@@ -96,7 +96,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/gear_vr.jpeg" alt="">
           <div class="details">
             <span class="title">Samsung Oculus Gear VR - Compatible: S7, S7 edge, Note5, S6 edge+, S6, S6 edge (SM-R323)</span>
@@ -107,7 +107,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/perforadora_sold.jpeg" alt="">
           <div class="details">
 	    <span class="title">Taladro percutor destornillador inalambrico Bauker (CD120)</span>
@@ -118,7 +118,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/vitroconvector_sold.jpg" alt="">
           <div class="details">
             <span class="title">Vitroconvector Calefactor eléctrico Peabody 2000W (PE-VC20B)</span>
@@ -129,7 +129,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/plancha_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Plancha Philco Seca 1200W (PSP1217N) - Casi sin uso</span>
@@ -140,7 +140,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/ps5_sold.jpeg" alt="">
           <div class="details">
 	    <span class="title">Sony PS5 Standard (CFI-1115A) + Joystick inalámbrico Sony PlayStation DualSense Original Galactic Purple (CFI-ZCT1)</span>
@@ -153,7 +153,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/tv24_1_sold.jpeg" alt="">
           <div class="details">
             <span class="title">TV Sanyo LCD 24" (LCD-24XH7)</span>
@@ -164,7 +164,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/tv42_1_sold.jpeg" alt="">
           <div class="details">
             <span class="title">TV Philips 42" LCD HD (42PFL3403/77)</span>
@@ -175,7 +175,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/samsung_50_sold.jpg" alt="">
           <div class="details">
             <span class="title">TV Samsung 4k 50" Smart Serie 6 (UN50MU6100GCDF)</span>
@@ -186,7 +186,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/sandwichera_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Sandwichera Phillips - Con superficie antiadherente - 700w</span>
@@ -197,7 +197,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/balanza_1_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Balanza Personal - NICTOM - Conexion a Smartphone</span>
@@ -220,7 +220,7 @@
 
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/comoda.jpg" alt="">
           <div class="details">
             <span class="title">Comoda 125cm x 86cm x 48cm Negra</span>
@@ -231,7 +231,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/placard.jpg" alt="">
           <div class="details">
             <span class="title">Placard 58cm ancho x 184cm alto x 47cm profundidad - 2 puertas - Melamina Blanco</span>
@@ -242,7 +242,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/cama_casa.jpeg" alt="">
           <div class="details">
             <span class="title">Cama Casita Montesori 150cm x 90cm x 160cm de alto + Colchón 140cm x 80cm + sábanas</span>
@@ -253,7 +253,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/estanteria_cars.jpeg" alt="">
           <div class="details">
             <span class="title">Biblioteca - Estantería con cajonera - Cars</span>
@@ -264,7 +264,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/mesa_plegable.jpeg" alt="">
           <div class="details">
             <span class="title">Mesa Plegable Porta Laptop / Desayuno</span>
@@ -287,7 +287,7 @@
       <hr class="solid">
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/plato_giratorio.jpeg" alt="">
           <div class="details">
             <span class="title">Plato de Presentación Giratorio para Torta - 35cm</span>
@@ -298,7 +298,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/vajilla_china.jpeg" alt="">
           <div class="details">
             <span class="title">Vajilla China de Porcelana</span>
@@ -309,7 +309,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/wok.jpeg" alt="">
           <div class="details">
             <span class="title">Wok Teflon Antiadherente - 28cm x 10cm</span>
@@ -320,7 +320,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/dips.jpeg" alt="">
           <div class="details">
             <span class="title">Set de Dips - Copetineros</span>
@@ -331,7 +331,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/casuelas_snacks.jpeg" alt="">
           <div class="details">
             <span class="title">Casuelas para Picada Snacks</span>
@@ -342,7 +342,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/ensaladera_ceramica.jpeg" alt="">
           <div class="details">
             <span class="title">Ensaladera de Cerámica con Ribetes Plateados</span>
@@ -353,7 +353,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/ensaladera_vidrio.jpeg" alt="">
           <div class="details">
             <span class="title">Ensaladera de Vidrio</span>
@@ -364,7 +364,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/vasos_durax_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Vasos Durax - 6 unidades</span>
@@ -375,7 +375,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/provolera_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Provoletera de cerámica - para microondas</span>
@@ -386,7 +386,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/escurreplatos_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Seca Platos Escurridor Premium 100% Acero Inoxidable - Incluye cubiertero y Bandeja para retirar el agua</span>
@@ -397,7 +397,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/pastalinda_1_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Pastalinda - Fabrica de Pasta - Morris (MO-013)</span>
@@ -408,7 +408,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/tazas_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Tazas Cuadradas x 6 unidades + Tetera + Azucarera + Lechera</span>
@@ -419,7 +419,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/copetineras_cuadradas_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Copetineras Cuadradas x 4 unidades</span>
@@ -430,7 +430,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/copetineras_flor_sold.jpeg" alt="">
           <div class="details">
             <span class="title">4 Copetineras en Flor</span>
@@ -441,7 +441,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/fuentes_vidrio_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Fuentes de Vidrio Acanaladas Marinex x 4 unidades - Apto Freezer, Horno y Microondas - 26cm x 6cm</span>
@@ -452,7 +452,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/tuppers_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Tuppers de Vidrio con Tapa Plástica x 6 unidades - Apto Freezer, Horno y Microondas</span>
@@ -463,7 +463,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/jarra_vidrio_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Jarra de vidrio 1L</span>
@@ -486,7 +486,7 @@
       <hr class="solid">
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/monopatin_1.jpeg" alt="">
           <div class="details">
             <span class="title">Monopatin Sieteveinte Glow - Metalico</span>
@@ -497,7 +497,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/protectores.jpg" alt="">
           <div class="details">
             <span class="title">Set Protecciones Tuxs Profesional Kit Rodillera Codera Skate</span>
@@ -508,7 +508,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/lego_city.jpeg" alt="">
           <div class="details">
             <span class="title">LEGO CITY - Police - 80 piezas - Starter Set 60136 Building Kit</span>
@@ -519,7 +519,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/te_conozco.jpeg" alt="">
           <div class="details">
             <span class="title">Te Conozco? - ¿cuales son tus verdaderos colores? - SELLADO - SIN USO</span>
@@ -530,7 +530,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/9_pistas.jpeg" alt="">
           <div class="details">
             <span class="title">9 pistas - Piensa rapido y descubre el misterio</span>
@@ -541,7 +541,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/arma_mec.jpeg" alt="">
           <div class="details">
             <span class="title">Armamec concept 8 - 230 piezas</span>
@@ -552,7 +552,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/blocky_piratas.jpeg" alt="">
           <div class="details">
             <span class="title">Blocky Piratas - 100 Pcs (01-0637)</span>
@@ -563,7 +563,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/chanchitos.jpeg" alt="">
           <div class="details">
             <span class="title">Los Chanchitos Constructores</span>
@@ -574,7 +574,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/skate_1_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Skate - 59cm x 15cm - Sin Lija - Hasta 45kg</span>
@@ -585,7 +585,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/bici_chica_1_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Bicicleta Rodado 16 - Azul - Reynolds - Triban</span>
@@ -596,7 +596,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/bici_grande_1_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Bicicleta Rodado 24 - Negra y Verde - Olmo Mint</span>
@@ -607,7 +607,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/zanahorias_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Zanahorias - Mi primer juego de suma y resta</span>
@@ -618,7 +618,7 @@
       </div>
 
       <div class="tiles">
-	<a class="tile" href="#">
+	<a class="tile">
           <img src="images/camarero_sold.jpeg" alt="">
           <div class="details">
             <span class="title">El Camarero - Un juego de Maldon</span>
