--- a/venta/index.html
+++ b/venta/index.html
@@ -75,17 +75,6 @@
 
       <div class="tiles">
 	<a class="tile">
-          <img src="images/heladera.jpeg" alt="">
-          <div class="details">
-            <span class="title">Heladera con freezer superior Twin Cooling Plus - Samsung - 382L Total - 89L Freezer (RT38K593SL)</span>
-            <span class="info">Precio: <b>$ 180.000</b><br>
-            Disponible: Junio</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile">
           <img src="images/cafetera.jpeg" alt="">
           <div class="details">
             <span class="title">Cafetera Nespresso Lattissima Touch Black (F521-AR-BK-NE) - 1 año de uso</span>
@@ -102,6 +91,17 @@
             <span class="title">Samsung Oculus Gear VR - Compatible: S7, S7 edge, Note5, S6 edge+, S6, S6 edge (SM-R323)</span>
             <span class="info">Precio: <b>$ 7.000</b><br>
             Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile">
+          <img src="images/heladera_sold.jpeg" alt="">
+          <div class="details">
+            <span class="title">Heladera con freezer superior Twin Cooling Plus - Samsung - 382L Total - 89L Freezer (RT38K593SL)</span>
+	    <span class="info">Precio: <b><s>$ 180.000</s> VENDIDA</b><br>
+            Disponible: Junio</span>
           </div>
         </a>
       </div>
