--- a/venta/index.html
+++ b/venta/index.html
@@ -351,10 +351,10 @@
 
       <div class="tiles">
         <a class="tile">
-          <img src="images/ensaladera_ceramica.jpeg" alt="">
+          <img src="images/ensaladera_ceramica_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Ensaladera de Cerámica con Ribetes Plateados</span>
-            <span class="info">Precio: <b>$ 1.600</b><br>
+	    <span class="info">Precio: <b><s>$ 1.600</s> VENDIDA</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
