Remove redirect to tiendanube

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://vieytux.mitiendanube.com/">
+        <meta http-equiv="refresh" content="0; url=https://kurumor.github.io/venta/">
         <script type="text/javascript">
-            window.location.href = "https://vieytux.mitiendanube.com/"
+            window.location.href = "https://kurumor.github.io/venta/"
         </script>
         <title>Vendemos todo por mudanza</title>
     </head>
     <body>
-        If you are not redirected automatically, follow this <a href='https://vieytux.mitiendanube.com/'>link</a>.
+        If you are not redirected automatically, follow this <a href='https://kurumor.github.io/venta/'>link</a>.
     </body>
 </html>
