Join two columns

--- a/venta/index.html
+++ b/venta/index.html
@@ -42,12 +42,11 @@
   </header>
 
   <ul class="menu">
-    <li><a href="#kitchen">Cocina</a></li>
+    <li><a href="#kitchen">Cocina y Tecnología</a></li>
     <li><a href="#toys">Juegos</a></li>
     <li><a href="#books">Libros</a></li>
     <li><a href="#muebles">Muebles y Hogar</a></li>
     <li><a href="#rodados">Rodados y Aire Libre</a></li>
-    <li><a href="#technology">Tecnología</a></li>
   </ul>
 
 
@@ -122,6 +121,103 @@
           <div class="details">
             <span class="title">Ensaladera de Vidrio</span>
             <span class="info">Precio: <b>$ 1.400</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+
+
+    <!--============-->
+    <!-- TECHNOLOGY -->
+    <!--============-->
+      <h2 style="color: blue">Tecnología</h2>
+      <hr class="solid">
+
+      <div class="tiles">
+        <a class="tile">
+          <img src="images/lg_oled_55.jpg" alt="">
+          <div class="details">
+            <span class="title">TV LG OLED AI ThinQ 4k 55" Smart (OLED55BXPSA)</span>
+            <span class="info">Precio: <b>$ 390.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+        <a class="tile">
+          <img src="images/cafetera.jpeg" alt="">
+          <div class="details">
+            <span class="title">Cafetera Nespresso Lattissima Touch Black (F521-AR-BK-NE) - 1 año de uso</span>
+            <span class="info">Precio: <b>$ 150.000</b><br>
+            Disponible: Agosto</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+        <a class="tile">
+          <img src="images/gear_vr.jpeg" alt="">
+          <div class="details">
+            <span class="title">Samsung Oculus Gear VR - Compatible: S7, S7 edge, Note5, S6 edge+, S6, S6 edge (SM-R323)</span>
+            <span class="info">Precio: <b>$ 6.500</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+        <a class="tile">
+          <img src="images/headset.jpeg" alt="">
+          <div class="details">
+            <span class="title">Headset Gamer SteelSeries Siberia V1 - Funcionan perfectos - Funda de la cinta desgastada</span>
+            <span class="info">Precio: <b>$ 10.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+        <a class="tile">
+          <img src="images/dvd_player.jpeg" alt="">
+          <div class="details">
+            <span class="title">Reproductor DVD JVC (XV-N322S)</span>
+            <span class="info">Precio: <b>$ 1.500</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+        <a class="tile">
+          <img src="images/tech/electrodos.jpeg" alt="">
+          <div class="details">
+            <span class="title">Electroestimulador muscular de 16 electrodos. Incluye corrientes rusas, galvánica y electroanalgesia.</span>
+            <span class="info">Precio: <b>$ $ 25,000.00</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+        <a class="tile">
+          <img src="images/tech/photo_frame.jpeg" alt="">
+          <div class="details">
+            <span class="title">Portaretratos Digital de 7" con Control Remoto</span>
+            <span class="info">Precio: <b>$ $ 2,000.00</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+        <a class="tile">
+          <img src="images/tech/soporte_tv.jpeg" alt="">
+          <div class="details">
+            <span class="title">Soporte para TV TCL - Modelo LCD-32PAR</span>
+            <span class="info">Precio: <b>$ $ 1,000.00</b><br>
+            Para modelos LCD27V8 - LCD32V8 - LCD37V8 - LCD40V8<br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -1021,106 +1117,6 @@
           <div class="details">
             <span class="title">Pileta infantil Bestway - 122cm diametro, 25cm alto</span>
             <span class="info">Precio: <b>$ $ 5,000.00</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-    </div>
-
-
-
-    <!--============-->
-    <!-- TECHNOLOGY -->
-    <!--============-->
-    <div id="technology" class="section">
-
-      <h2 style="color: blue">Tecnología</h2>
-      <hr class="solid">
-
-      <div class="tiles">
-        <a class="tile">
-          <img src="images/lg_oled_55.jpg" alt="">
-          <div class="details">
-            <span class="title">TV LG OLED AI ThinQ 4k 55" Smart (OLED55BXPSA)</span>
-            <span class="info">Precio: <b>$ 390.000</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-        <a class="tile">
-          <img src="images/cafetera.jpeg" alt="">
-          <div class="details">
-            <span class="title">Cafetera Nespresso Lattissima Touch Black (F521-AR-BK-NE) - 1 año de uso</span>
-            <span class="info">Precio: <b>$ 150.000</b><br>
-            Disponible: Agosto</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-        <a class="tile">
-          <img src="images/gear_vr.jpeg" alt="">
-          <div class="details">
-            <span class="title">Samsung Oculus Gear VR - Compatible: S7, S7 edge, Note5, S6 edge+, S6, S6 edge (SM-R323)</span>
-            <span class="info">Precio: <b>$ 6.500</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-        <a class="tile">
-          <img src="images/headset.jpeg" alt="">
-          <div class="details">
-            <span class="title">Headset Gamer SteelSeries Siberia V1 - Funcionan perfectos - Funda de la cinta desgastada</span>
-            <span class="info">Precio: <b>$ 10.000</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-        <a class="tile">
-          <img src="images/dvd_player.jpeg" alt="">
-          <div class="details">
-            <span class="title">Reproductor DVD JVC (XV-N322S)</span>
-            <span class="info">Precio: <b>$ 1.500</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-        <a class="tile">
-          <img src="images/tech/electrodos.jpeg" alt="">
-          <div class="details">
-            <span class="title">Electroestimulador muscular de 16 electrodos. Incluye corrientes rusas, galvánica y electroanalgesia.</span>
-            <span class="info">Precio: <b>$ $ 25,000.00</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-        <a class="tile">
-          <img src="images/tech/photo_frame.jpeg" alt="">
-          <div class="details">
-            <span class="title">Portaretratos Digital de 7" con Control Remoto</span>
-            <span class="info">Precio: <b>$ $ 2,000.00</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-        <a class="tile">
-          <img src="images/tech/soporte_tv.jpeg" alt="">
-          <div class="details">
-            <span class="title">Soporte para TV TCL - Modelo LCD-32PAR - Para modelos LCD27V8 - LCD32V8 - LCD37V8 - LCD40V8 </span>
-            <span class="info">Precio: <b>$ $ 1,000.00</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
