improve mesa description

--- a/venta/index.html
+++ b/venta/index.html
@@ -726,9 +726,9 @@
         <a class="tile">
           <img src="images/mesa_y_sillas.png" alt="">
           <div class="details">
-            <span class="title">Juego de comedor: Mesa extensible a 1.80 mts Negra con 6 Sillas</span>
+            <span class="title">Mesa extensible a 1.80 mts Negra + 6 Sillas</span>
             <span class="info">Precio: <b>$ 40.000</b><br>
-            NOTA: Falta uno de los vidrios y a dos sillas les falta una varilla de refuerzo<br>
+            NOTA: Falta un vidrios y detalles en las sillas<br>
             Disponible: Inmediato</span>
           </div>
         </a>
