--- a/venta/index.html
+++ b/venta/index.html
@@ -527,7 +527,7 @@
         <li>
           <img src="images/mesa_y_sillas.png" alt="">
           <div class="overlay">
-            <span>Juego de comedor: Mesa axtensible a 1.80 mts Negra<br>
+            <span>Juego de comedor: Mesa extensible a 1.80 mts Negra<br>
             Precio: <b>$ $ 40,000.00</b><br>
             Disponible: Inmediato</span>
           </div>
@@ -538,6 +538,15 @@
           <div class="overlay">
             <span>Comoda 125cm x 86cm x 48cm Negra<br>
             Precio: <b>$ $ 30,000.00</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/bahiut.jpg" alt="">
+          <div class="overlay">
+            <span>Vajillero Bahiut Negro 4 Puertas 4 Cajones<br>
+            Precio: <b>$ $ 40,000.00</b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
@@ -564,7 +573,7 @@
           <img src="images/cama_marinera.jpeg" alt="">
           <div class="overlay">
             <span>Cama marinera de 1 plaza - madera - separables<br>
-            Precio: <b>$ $ 85,000.00</b><br>
+            Precio: <b>$ $ 50,000.00</b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
@@ -634,7 +643,7 @@
           <img src="images/carting_1.jpg" alt="">
           <div class="overlay">
             <span>Karting metálico azul a pedal, con freno de mano<br>
-            Precio: <b>$ $ 20,000.00</b><br>
+            Precio: <b>$ $ 35,000.00</b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
