--- a/venta/index.html
+++ b/venta/index.html
@@ -19,6 +19,7 @@
         <ul class="menu">
           <li><a href="#airelibre">Aire Libre</a></li>
           <li><a href="#cocina">Cocina</a></li>
+          <li><a href="#hogar">Hogar</a></li>
           <li><a href="#juegos">Juegos</a></li>
           <li><a href="#libros">Libros</a></li>
           <li><a href="#muebles">Muebles y Hogar</a></li>
