--- a/venta/index.html
+++ b/venta/index.html
@@ -22,7 +22,7 @@
           <li><a href="#hogar">Hogar</a></li>
           <li><a href="#juegos">Juegos</a></li>
           <li><a href="#libros">Libros</a></li>
-          <li><a href="#muebles">Muebles y Hogar</a></li>
+          <li><a href="#muebles">Muebles</a></li>
           <li><a href="#rodados">Rodados</a></li>
           <li><a href="#tecnologia">Tecnología</a></li>
         </ul>
