--- a/venta/index.html
+++ b/venta/index.html
@@ -224,15 +224,6 @@
         </li>
 
         <li>
-          <img src="images/chanchitos.jpeg" alt="">
-          <div class="overlay">
-            <span>Los Chanchitos Constructores<br>
-            Precio: <b>$ $ 2,500.00</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
           <img src="images/juegos/a_quien_elijo.jpeg" alt="">
           <div class="overlay">
             <span>A quien Elijo - Juego de mesa<br>
@@ -420,6 +411,15 @@
             Disponible: Inmediato</span>
           </div>
         </li>
+
+        <li>
+          <img src="images/juegos/atril.jpeg" alt="">
+          <div class="overlay">
+            <span>Atril de madera altura regulable<br>
+            Precio: <b>$ $ 2,000.00</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>         
       </ul>
     </div>
     
@@ -535,7 +535,7 @@
         </li>
 
         <li>
-          <img src="images/bahiut.jpg" alt="">
+          <img src="images/muebles/bahiut.jpeg" alt="">
           <div class="overlay">
             <span>Vajillero Bahiut Negro 4 Puertas 4 Cajones<br>
             Precio: <b>$ $ 40,000.00</b><br>
