Add bahiut size

--- a/venta/index.html
+++ b/venta/index.html
@@ -537,7 +537,7 @@
         <li>
           <img src="images/muebles/bahiut.jpeg" alt="">
           <div class="overlay">
-            <span>Vajillero Bahiut Negro 4 Puertas 4 Cajones<br>
+            <span>Vajillero Bahiut Negro 4 Puertas 4 Cajones. 180cm x 45cm x 86cm<br>
             Precio: <b>$ $ 40,000.00</b><br>
             Disponible: Inmediato</span>
           </div>
