--- a/venta/index.html
+++ b/venta/index.html
@@ -47,6 +47,15 @@
             Disponible: Inmediato</span>
           </div>
         </li>
+
+        <li>
+          <img src="images/airelibre/flotador_unicornio.jpg" alt="">
+          <div class="overlay">
+            <span>Flotador Unicornio<br>
+            Precio: <b>$  $ 1,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
       </ul>
     </div>
     
@@ -412,6 +421,15 @@
         </li>
 
         <li>
+          <img src="images/juegos/pata_pata_unicornio.jpeg" alt="">
+          <div class="overlay">
+            <span>Pata Pata unicornio - Desmontable en peluche<br>
+            Precio: <b>$  $ 7,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
           <img src="images/juegos/avengers_quien_es_quien.jpeg" alt="">
           <div class="overlay">
             <span>Avengers tipo Quien es Quien / A quien elijo<br>
@@ -434,6 +452,42 @@
           <div class="overlay">
             <span>Atril de madera altura regulable<br>
             Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/peluche_mona.jpeg" alt="">
+          <div class="overlay">
+            <span>Mona de Peluche<br>
+            Precio: <b>$  $ 1,800 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/peluche_coati.jpeg" alt="">
+          <div class="overlay">
+            <span>Coati Peluche - Cataratas del Iguazu - Brasil<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/peluche_loro.jpeg" alt="">
+          <div class="overlay">
+            <span>Loro Guacamayo Peluche - Brasil<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/peluche_poo_mediano.jpeg" alt="">
+          <div class="overlay">
+            <span>Poo Peluche<br>
+            Precio: <b>$  $ 1,500 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
