--- a/venta/index.html
+++ b/venta/index.html
@@ -99,6 +99,15 @@
             Disponible: Inmediato</span>
           </div>
         </li>
+
+        <li>
+          <img src="images/cocina/especieros.jpeg" alt="">
+          <div class="overlay">
+            <span>Especieros Condimenteros x6<br>
+            Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
       </ul>
     </div>
     
@@ -171,10 +180,19 @@
         </li>
 
         <li>
-          <img src="images/hogar/perchas_negras.jpeg" alt="">
+          <img src="images/hogar/perchas_chicas_color.jpeg" alt="">
           <div class="overlay">
-            <span>92 Perchas Grandes de Plastico Negras y de regalo 13 de colores (6 x $150 - $2000 todas)<br>
-            Precio: <b>$  $ 2,000 </b><br>
+            <span>33 Perchas Chicas de Plastico Varios Colores<br>
+            Precio: <b>$  $ 1,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/hogar/perchas_madera.jpeg" alt="">
+          <div class="overlay">
+            <span>10 Perchas Grandes de Madera y 3  perchas chicas de madera<br>
+            Precio: <b>$  $ 1,500 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
@@ -187,307 +205,91 @@
       <ul class="image-gallery">
 
         <li>
-          <img src="images/lego_city.jpeg" alt="">
+          <img src="images/libros/libro_disculpe.jpeg" alt="">
           <div class="overlay">
-            <span>LEGO CITY - Police - 80 piezas - Starter Set 60136 Building Kit<br>
-            Precio: <b>$  $ 8,000 </b><br>
+            <span>Disculpe ... ¿es usted una bruja?<br>
+            Precio: <b>$  $ 2,100 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
 
         <li>
-          <img src="images/stunt_flyer.jpeg" alt="">
+          <img src="images/libros/libro_kasi_kasi.jpeg" alt="">
           <div class="overlay">
-            <span>Stunt Flyer Avion Lanzador<br>
-            Precio: <b>$  $ 7,000 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/te_conozco.jpeg" alt="">
-          <div class="overlay">
-            <span>Te Conozco? - ¿cuales son tus verdaderos colores? - SELLADO - SIN USO<br>
-            Precio: <b>$  $ 2,000 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/9_pistas.jpeg" alt="">
-          <div class="overlay">
-            <span>9 pistas - Piensa rapido y descubre el misterio<br>
-            Precio: <b>$  $ 1,700 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/a_quien_elijo.jpeg" alt="">
-          <div class="overlay">
-            <span>A quien Elijo - Juego de mesa<br>
-            Precio: <b>$  $ 1,600 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/aspiradora_juguete.jpeg" alt="">
-          <div class="overlay">
-            <span>Caminador Aspiradora Lustradora Juguete<br>
-            Precio: <b>$  $ 2,000 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/binocular.jpeg" alt="">
-          <div class="overlay">
-            <span>Binocular con luz nocturna - Galileo<br>
-            Precio: <b>$  $ 5,000 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/blocky_competicion.jpeg" alt="">
-          <div class="overlay">
-            <span>Blocky competición 2 - 200 piezas<br>
-            Precio: <b>$  $ 3,000 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/brilla_princesa.jpeg" alt="">
-          <div class="overlay">
-            <span>Set para armar Bishou - Disney Princesa<br>
+            <span>El sueño de Kasi Kasi<br>
             Precio: <b>$  $ 1,500 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
 
         <li>
-          <img src="images/juegos/carro_compras.jpeg" alt="">
+          <img src="images/libros/libro_look_3_anthology.jpeg" alt="">
           <div class="overlay">
-            <span>Carrito de compras infantil<br>
+            <span>Look 3 - Nationl Geographic - Anthology<br>
             Precio: <b>$  $ 1,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
 
         <li>
-          <img src="images/juegos/coche_paseo.jpeg" alt="">
+          <img src="images/libros/libro_look_3_student.jpeg" alt="">
           <div class="overlay">
-            <span>Coche de Paseo de Juguete con bandeja - Fiorella<br>
-            Precio: <b>$  $ 2,400 </b><br>
+            <span>Look 3 - Nationl Geographic - Student Book<br>
+            Precio: <b>$  $ 1,500 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
 
         <li>
-          <img src="images/juegos/cocina_juguete.jpeg" alt="">
+          <img src="images/libros/libro_look_3_workbook.jpeg" alt="">
           <div class="overlay">
-            <span>Juego De Cocina + Juego de Te Duravit <br>
-            Precio: <b>$  $ 4,500 </b><br>
+            <span>Look 3 - Nationl Geographic - Workbook (con varias páginas escritas)<br>
+            Precio: <b>$  $ 1,500 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
 
         <li>
-          <img src="images/juegos/creando.jpeg" alt="">
+          <img src="images/libros/libro_paraguas.jpeg" alt="">
           <div class="overlay">
-            <span>Creando mi moda - Arma tus propias pulseras<br>
-            Precio: <b>$  $ 2,500 </b><br>
+            <span>El paraguas floreado<br>
+            Precio: <b>$  $ 1,500 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
 
         <li>
-          <img src="images/juegos/dream_jungle.jpeg" alt="">
+          <img src="images/libros/libro_traje.jpg" alt="">
           <div class="overlay">
-            <span>Dream Jungle - 115 piezas - Electric BLockWorld No. 9902<br>
-            Precio: <b>$  $ 6,500 </b><br>
+            <span>El traje del emperador y otros cuentos clásicos<br>
+            Precio: <b>$  $ 1,200 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
 
         <li>
-          <img src="images/juegos/grua_cat.jpeg" alt="">
+          <img src="images/libros/libro_casa.jpeg" alt="">
           <div class="overlay">
-            <span>Retroexcavadora CAT Importada A Control Remoto.<br>
-            Precio: <b>$  $ 8,000 </b><br>
+            <span>La casa maldita<br>
+            Precio: <b>$  $ 1,600 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
 
         <li>
-          <img src="images/juegos/hotwheels_pared.jpeg" alt="">
+          <img src="images/libros/libro_perdidos.jpeg" alt="">
           <div class="overlay">
-            <span>Hotwheeels - Wall Tracks spin Slammer<br>
-            Precio: <b>$  $ 20,000 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/king_pong.jpeg" alt="">
-          <div class="overlay">
-            <span>Juego de mesa King Pong<br>
+            <span>Perdidos y encontrados<br>
             Precio: <b>$  $ 3,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
 
         <li>
-          <img src="images/juegos/letras_3d.jpeg" alt="">
+          <img src="images/libros/libro_titere.jpeg" alt="">
           <div class="overlay">
-            <span>Juego de mesa Letras 3D<br>
-            Precio: <b>$  $ 2,000 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/ludo_avengers.jpeg" alt="">
-          <div class="overlay">
-            <span>Ludo Avengers<br>
-            Precio: <b>$  $ 1,500 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/peluqueria.jpeg" alt="">
-          <div class="overlay">
-            <span>Corazon Coqueto Set Valija Juego De Peluqueria Y Belleza<br>
-            Precio: <b>$  $ 4,000 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/pianito.jpeg" alt="">
-          <div class="overlay">
-            <span>Piano Con Luz Y Sonido Intellect Toys<br>
-            Precio: <b>$  $ 3,500 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/pinball_star-wars.jpeg" alt="">
-          <div class="overlay">
-            <span>Pinball Star Wars<br>
-            Precio: <b>$  $ 8,000 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/ruleta.jpeg" alt="">
-          <div class="overlay">
-            <span>Ruleta Plastigal - Art.205 - Poco uso<br>
-            Precio: <b>$  $ 1,800 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/sospechosos.jpeg" alt="">
-          <div class="overlay">
-            <span>Sospechosos - Juego de misterio<br>
-            Precio: <b>$  $ 2,000 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/tambor.jpeg" alt="">
-          <div class="overlay">
-            <span>Tambores juguete rosa<br>
-            Precio: <b>$  $ 3,500 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/el_cuerpo_humano.jpeg" alt="">
-          <div class="overlay">
-            <span>El cuerpo humano<br>
-            Precio: <b>$  $ 1,100 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/pata_pata_unicornio.jpeg" alt="">
-          <div class="overlay">
-            <span>Pata Pata unicornio - Desmontable en peluche<br>
-            Precio: <b>$  $ 7,000 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/avengers_quien_es_quien.jpeg" alt="">
-          <div class="overlay">
-            <span>Avengers tipo Quien es Quien / A quien elijo<br>
-            Precio: <b>$  $ 2,500 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/magia_180trucos.jpeg" alt="">
-          <div class="overlay">
-            <span>Magia 180 trucos - Ruibal<br>
-            Precio: <b>$  $ 5,000 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/atril.jpg" alt="">
-          <div class="overlay">
-            <span>Atril de madera altura regulable<br>
-            Precio: <b>$  $ 2,000 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/peluche_mona.jpeg" alt="">
-          <div class="overlay">
-            <span>Mona de Peluche<br>
-            Precio: <b>$  $ 1,800 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/peluche_coati.jpeg" alt="">
-          <div class="overlay">
-            <span>Coati Peluche - Cataratas del Iguazu - Brasil<br>
-            Precio: <b>$  $ 2,000 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/peluche_loro.jpeg" alt="">
-          <div class="overlay">
-            <span>Loro Guacamayo Peluche - Brasil<br>
-            Precio: <b>$  $ 2,000 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/peluche_poo_mediano.jpeg" alt="">
-          <div class="overlay">
-            <span>Poo Peluche<br>
-            Precio: <b>$  $ 1,500 </b><br>
+            <span>Libro titere - Tomi Tiranosaurio y su fiesta de cumpleaños<br>
+            Precio: <b>$  $ 1,700 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
@@ -628,6 +430,15 @@
           <div class="overlay">
             <span>Cama Casita Montesori 150cm x 90cm x 160cm de alto + Colchón 140cm x 80cm + sábanas<br>
             Precio: <b>$  $ 15,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/muebles/mesa_ratona.jpeg" alt="">
+          <div class="overlay">
+            <span>Mesa ratona negra + 2 puffs rojos<br>
+            Precio: <b>$  $ 6,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
