Add cuna funcional

--- a/venta/index.html
+++ b/venta/index.html
@@ -478,6 +478,15 @@
             Disponible: Inmediato</span>
           </div>
         </li>
+
+        <li>
+          <img src="images/muebles/cuna_funcional.jpg" alt="">
+          <div class="overlay">
+            <span>Cuna funcional con 3 cajones y baul a cama de una plaza salen de 130k a 200k. Le ponemos 75k<br>
+            Precio: <b>$  $ 50,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
       </ul>
     </div>
     
